"fixed" button on mobile

--- a/Webquiz/style.css
+++ b/Webquiz/style.css
@@ -15,21 +15,30 @@
         padding: 0px;
         position: relative; 
     }
-    .img-banner{
-        width: 100%;
-        margin-bottom: 0px;
-        display: block;
+
+    .header {
+        background-color: #cbf078;
+        height: 15vh;
+    }
+
+    h1 {
+        font-size: 4em;
+        display: flex;
+       
+        justify-content: center;
+        text-align: center;
     }
  
-    ul.top-navbar{
+    ul.top-navbar {
         display: flex;
         list-style-type: none;
         margin: 0px;
         overflow: hidden;
-        background-color: #ff6f61;
+        background-color: #f8f398;
         font-size: 25px;
         padding: 10px; 
-        justify-content: space-around;   
+        justify-content: space-around;  
+        height: 10vh; 
     }
     
     li.top-navbar {
@@ -46,20 +55,20 @@
         margin-right: 0px;
         display: flex;
         width: 100vw;
-        height: 72vh;
+        height: 75vh;
     }
 
     .sidenav {   
-        width: 15vw;
+        width: 16vw;
         overflow-x: hidden; /* Disable horizontal scroll */
         padding: 0px;
-        background-color: #34568b;
+        background-color: #e46161;
     }
     
     /* The navigation menu links */
     .sidenav a {
         text-decoration: none;
-        font-size: 1rem;
+        font-size: 2rem;
         color: black;      
         text-transform: uppercase;
         letter-spacing: .15rem;
@@ -72,8 +81,8 @@
     }
 
     .inhalt-container{
-        background-color: #6b5b95;
-        width: 85vw; 
+        background-color: #f1b963;
+        width: 84vw; 
         padding: 20px;
     }
     
@@ -90,6 +99,7 @@
     button{
         display: inline-block;
         width: 17vw;
+        height: 8vh;
         padding: .75rem 1.25rem;
         border-radius: 10rem;
         text-transform: uppercase;
@@ -134,7 +144,7 @@
 
     /* ab hier geht es um die Stats*/
     .statscontainer{
-        background-color: aqua;
+        background-color: #f1b963;
         width: 100%;
         height: 100%;
     }
@@ -157,66 +167,75 @@
 
 
 /* KLEIN */
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1500px){
     /* vllt noch blau und rot tauschen */
-    .img-banner{
+    .header{
         display: none;
     }
-
 
     .container-1{
         display: flex;
         flex-direction: column;
-
+        height: 90vh;
     }
     .sidenav {
         position:flex; 
         padding: 10px 0px 0px 10px;
         width: 100vw;
     }
-    ul.sidenav{
+    ul.sidenav {
         display: flex;
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: blue;
         font-size: 25px;
         padding: 10px; 
         justify-content: space-around;
     }
-    li.sidenav{
+
+    li.sidenav {
         display: inline;
         padding: 0px 0px 0px 0px;
     }
+
     .sidenav a {
         flex-direction: row;
-        
+        font-size: 1rem;
         padding: 0px 0px 0px 0px;
-   
     }
+
     li.sidenav {
         display: block;
     }
 
 
     .inhalt-container{
-        background-color: pink;
         width: 100vw;
-        height: 100%;
-        margin: none;
+        height: 100vh;
+    }
+
+    .themen-btn {
+        font-size: 0.6rem;
     }
 
     button {
-        padding: .25rem 0.6rem;
-        font-size: 0.6rem;
+        padding: .15rem 0.3rem;
+        font-size: 1rem;
         letter-spacing: 0rem;
         word-wrap: break-word;
         width: auto;
+        border-radius: 5rem;
+    }
+ 
+    .button-container{
+        margin-top: 100px;
     }
 
     .antwort-btn {
-        width: 17vw;
+        vertical-align: top;
+        width: 40vw;
+        height: 15vh;
     }
 
     #btn-1 {
@@ -227,7 +246,21 @@
         width: 23vw;
     }
 
+    #btn-9 {
+        width: 40vw;
+        height: 20vw;
+    }
+
     #label-1 {
         font-size: 2em;
+    }
+
+    #label-2 {
+        margin: 10px 10px 10px 10px;
+    }
+
+    #label-2 a{
+        font-size: 1em;
+        line-break: loose;
     }
 }
